# app/models/form.server.model.js
@@ -16,10 +16,6 @@ mt.autoSeed();
 //Mongoose Models
 var FieldSchema = require('./form_field.server.model.js');
 
-var FormSubmissionSchema = require('./form_submission.server.model.js'),
-	FormSubmission = mongoose.model('FormSubmission', FormSubmissionSchema);
-
-
 var ButtonSchema = new Schema({
 	url: {
 		type: String,
@@ -100,10 +96,6 @@ var FormSchema = new Schema({
 	},
 
 	form_fields: [FieldSchema],
-	submissions: [{
-		type: Schema.Types.ObjectId,
-		ref: 'FormSubmission'
-	}],
 
 	admin: {
 		type: Schema.Types.ObjectId,
@@ -327,135 +319,6 @@ FormSchema.pre('save', function (next) {
 			break;
 	}
 	next();
-});
-
-function getDeletedIndexes(needle, haystack){
-	var deletedIndexes = [];
-
-	if(haystack.length > 0){
-	  	for(var i = 0; i < needle.length; i++){
-	    	if(haystack.indexOf(needle[i]) === -1){
-				deletedIndexes.push(i);
-	    	}
-	  	}
-	}
-	return deletedIndexes;
-}
-
-function formFieldsAllHaveIds(form_fields){
-	for(var i=0; i<form_fields.length; i++){
-		if(!form_fields[i].hasOwnProperty('_id') && !form_fields[i].hasOwnProperty('globalId')){
-			return false;
-		}
-	}
-	return true;
-}
-
-FormSchema.pre('save', function (next) {
-	var that = this;
-	var _original;
-
-	async.series([function(cb) {
-		that.constructor
-			.findOne({_id: that._id}).exec(function (err, original) {
-			if (err) {
-				return cb(err);
-			} else if (!original){
-				return next();
-			} else {
-				_original = original;
-				return cb(null);
-			}
-		});
-	},
-	function(cb) {
-		if(that.form_fields && that.isModified('form_fields') && formFieldsAllHaveIds(that.toObject().form_fields)){
-
-			var current_form = that.toObject(),
-				old_form_fields = _original.toObject().form_fields,
-				new_ids = _.map(_.map(current_form.form_fields, 'globalId'), function(id){ return ''+id;}),
-				old_ids = _.map(_.map(old_form_fields, 'globalId'), function(id){ return ''+id;}),
-				deletedIds = getDeletedIndexes(old_ids, new_ids);
-
-			//Check if any form_fileds were deleted
-			if( deletedIds.length > 0 ){
-
-				var modifiedSubmissions = [];
-
-				async.forEachOfSeries(deletedIds,
-					function (deletedIdIndex, key, cb_id) {
-
-						var deleted_id = old_ids[deletedIdIndex];
-						//Find FormSubmissions that contain field with _id equal to 'deleted_id'
-						FormSubmission.
-						find({ form: that, form_fields: {$elemMatch: {globalId: deleted_id} }  }).
-						exec(function(err, submissions){
-							if(err) {
-								return cb_id(err);
-							}
-
-							//Preserve fields that have at least one submission
-							if (submissions.length) {
-								//Add submissions
-								modifiedSubmissions.push.apply(modifiedSubmissions, submissions);
-							}
-
-							return cb_id(null);
-						});
-					},
-					function (err) {
-						if(err){
-							console.error(err.message);
-							return cb(err);
-						}
-
-						//Iterate through all submissions with modified form_fields
-						async.forEachOfSeries(modifiedSubmissions, function (submission, key, callback) {
-
-							var submission_form_fields = submission.toObject().form_fields;
-							var currentform_form_fields = that.toObject().form_fields;
-
-							//Iterate through ids of deleted fields
-							for (var i = 0; i < deletedIds.length; i++) {
-								var index = _.findIndex(submission_form_fields, function (field) {
-									var tmp_id = field.globalId + '';
-									return tmp_id === old_ids[deletedIds[i]];
-								});
-
-								var deletedField = submission_form_fields[index];
-
-								//Hide field if it exists
-								if (deletedField) {
-
-									//Delete old form_field
-									submission_form_fields.splice(index, 1);
-
-									deletedField.deletePreserved = true;
-
-									//Move deleted form_field to start
-									submission_form_fields.unshift(deletedField);
-									currentform_form_fields.unshift(deletedField);
-								}
-							}
-							submission.form_fields = submission_form_fields;
-							that.form_fields = currentform_form_fields;
-
-							return callback(null);
-						}, function (err) {
-							return cb(err);
-						});
-					}
-				);
-			} else {
-				return cb(null);
-			}
-		} else {
-			return cb(null);
-		}
-	}],
-	function(err, results){
-		next(err);
-	});
 });
 
 mongoose.model('Form', FormSchema);
