# app/models/form_submission.server.model.js
@@ -5,29 +5,22 @@
  */
 var mongoose = require('mongoose'),
 	Schema = mongoose.Schema,
-	mUtilities = require('mongoose-utilities'),
-	FieldSchema = require('./form_field.server.model.js');
+	mUtilities = require('mongoose-utilities');
 
 /**
  * Form Submission Schema
  */
 var FormSubmissionSchema = new Schema({
-	title: {
-		type: String
-	},
-
-	admin: {
-		type: Schema.Types.ObjectId,
-		ref: 'User',
-		required: true
-	},
-
-	form_fields: [FieldSchema],
-
 	form: {
 		type: Schema.Types.ObjectId,
 		ref: 'Form',
 		required: true
+	},
+
+	respondentEmail: {
+		type: String,
+		trim: true,
+		match: [/.+\@.+\..+/, 'Please provide a valid email.']
 	},
 
 	ipAddr: {
@@ -58,21 +51,10 @@ var FormSubmissionSchema = new Schema({
 	}
 });
 
-FormSubmissionSchema.path('form_fields', {
-	set: function(form_fields){
-		for (var i = 0; i < form_fields.length; i++) {
-			form_fields[i].isSubmission = true;
-			form_fields[i].submissionId = form_fields[i]._id;
-			form_fields[i]._id = new mongoose.mongo.ObjectID();
-		}
-		return form_fields;
-	}
-});
-
 FormSubmissionSchema.plugin(mUtilities.timestamp, {
 	createdPath: 'created',
 	modifiedPath: 'lastModified',
 	useVirtual: false
 });
 
-module.exports = FormSubmissionSchema;
+module.exports = mongoose.model('FormSubmission', FormSubmissionSchema);
