# app/routes/core.server.routes.js
@@ -19,7 +19,7 @@ module.exports = function(app) {
 		app.route('/subdomain/:userSubdomain((?!api$)[A-Za-z0-9]+)/')
 		 .get(core.form);
 
-		app.route('/subdomain/:userSubdomain((?!api$)[A-Za-z0-9]+)/forms/:formId([a-zA-Z0-9]+)')
+		app.route('/subdomain/:userSubdomain((?!api$)[A-Za-z0-9]+)/forms/:formId([a-zA-Z0-9]+)/submissions')
 		 .post(forms.createSubmission);
 
 		app.route('/subdomain/:userSubdomain((?!api$)[A-Za-z0-9]+)/forms/:formId([a-zA-Z0-9]+)/render')
@@ -28,11 +28,10 @@ module.exports = function(app) {
 		app.route('/view/')
 			.get(core.form);
 
-		app.route('/forms/:formId([a-zA-Z0-9]+)')
+		app.route('/forms/:formId([a-zA-Z0-9]+)/submissions')
 			.post(forms.createSubmission);
 
 		app.route('/forms/:formId([a-zA-Z0-9]+)/render')
 			.get(forms.readForRender);
 	}
 };
-
